# Automous-obstacle-avoider

./: .gitignore  CMakeLists.txt  README.md  run_log.csv
.cache/clangd/index/: aoa_plugin.cpp.B0406D27103E5147.idx  avoider_plugin.cpp.13A2A5ED965625B5.idx  logger.cpp.A6277305A0E31BFA.idx  logger.hpp.95EBD5641F52B03C.idx  main.cpp.13F3048C9CC915A2.idx  main.cpp.600C63E6CB849B43.idx  motors.hpp.473CF0929A1B8953.idx  motors_pi.cpp.7B76CE539BE745C7.idx  motors_sim.cpp.9623A3DD6932A8AC.idx  navigator.cpp.A7CA1783EDE0AFA2.idx  navigator.hpp.215B66C2F3B6EF1D.idx  params.hpp.150EDCB3498C60E5.idx  pi_main.cpp.110CC73979336000.idx  sim_main.cpp.A524B69EA94F5824.idx  ultrasonic.hpp.69ADD77A72C822F1.idx  ultrasonic_pi.cpp.EB779DEBCFED4300.idx  ultrasonic_sim.cpp.400C4844D4B017B7.idx
aoa_core/: CMakeLists.txt  package.xml
aoa_core/config/: params.yaml
aoa_sim/: CMakeLists.txt  package.xml
aoa_sim/models/: aoa_bot.sdf
aoa_sim/scripts/: avoider.py
aoa_sim/worlds/: colorful_arena.world
config/: params.yaml
include/: logger.hpp  motors.hpp  navigator.hpp  params.hpp  ultrasonic.hpp
pi/: CMakeLists.txt  pi_main.cpp
pi/src/: main.cpp
scripts/: plot_log.py  run_pi.sh  run_sim.sh
sim/: CMakeLists.txt  sim_main.cpp
sim/gazebo/: avoider.world  pro_world.world
sim/gazebo/models/avoider_robot/: model.config  model.sdf
sim/gazebo/plugins/: avoider_plugin.cpp  avoider_plugin.cpp.disabled
sim/src/: aoa_plugin.cpp  main.cpp
sim/worlds/: aoa.world
src/: logger.cpp  motors_pi.cpp  motors_sim.cpp  navigator.cpp  ultrasonic_pi.cpp  ultrasonic_sim.cpp
