<?xml version="1.0"?>
<package format="3">
  <name>aoa_sim</name>
  <version>0.0.1</version>
  <description>Simulation package for Autonomous Obstacle Avoider (Gazebo + ROS2).</description>
  <maintainer email="talal.robotics@gmail.com">talalrobot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>

  <export/>
</package>
